--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">I Am Poor</string>
-    <string name="title">I am poor</string>
+    <string name="title1">I am</string>
+    <string name="title2">poor</string>
     <string name="image_view_content_description">coal</string>
 </resources>
